changes to documentation 1/2

--- a/docs/getting_started/tutorial.ipynb
+++ b/docs/getting_started/tutorial.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Tutorial"
+    "### Quickstart Tutorial"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1.1 Quickstart"
+    "#### 1.1 Making a Light Curve"
    ]
   },
   {
