docs on calling Source() but star in multiple sectors

--- a/docs/getting_started/tutorial.ipynb
+++ b/docs/getting_started/tutorial.ipynb
@@ -634,6 +634,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you are only interested in one Sector your star was observed in, you can call `eleanor.Source(sector=1)` and specify the Sector you are interested in. If your star was observed in multiple sectors and you call `eleanor.Source()`, it will return the light curve from the most recent Sector the star was observed in."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "hide_input": true
    },
@@ -673,9 +680,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [python3]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "Python [python3]"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -687,7 +694,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
