--- a/notebooks/eleanor_tesscut_demo.ipynb
+++ b/notebooks/eleanor_tesscut_demo.ipynb
@@ -12,6 +12,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can pass in a TIC, a Gaia DR2 ID, or coordinates (as a tuple or an Astropy SkyCoord object). Here we'll pass through the TIC corresponding to WASP-100.\n",
+    "\n",
+    "Here we'll look at data for one sector. Further down in this notebook is an example to call ``multi_sector`` to get data for multiple sectors at once."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -20,7 +29,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading URL https://mast.stsci.edu/tesscut/api/v0.1/astrocut?ra=68.9597092399964&dec=-64.0270368810381&y=31&x=31&units=px&sector=6 to ./tesscut_20190619105621.zip ... [Done]\n",
+      "Downloading URL https://mast.stsci.edu/tesscut/api/v0.1/astrocut?ra=68.9597092399964&dec=-64.0270368810381&y=31&x=31&units=px&sector=6 to ./tesscut_20190619143005.zip ... [Done]\n",
       "Inflating...\n"
      ]
     }
@@ -55,7 +64,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1113b1630>"
+       "<matplotlib.image.AxesImage at 0x112735630>"
       ]
      },
      "execution_count": 4,
@@ -85,7 +94,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x11329f0b8>]"
+       "[<matplotlib.lines.Line2D at 0x114c8d080>]"
       ]
      },
      "execution_count": 5,
@@ -116,7 +125,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x115cd84a8>"
+       "<matplotlib.image.AxesImage at 0x1131a6470>"
       ]
      },
      "execution_count": 6,
@@ -186,7 +195,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x114e5f748>"
+       "<matplotlib.image.AxesImage at 0x114fd6630>"
       ]
      },
      "execution_count": 9,
@@ -210,16 +219,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x13b7bbac8>]"
+       "[<matplotlib.lines.Line2D at 0x114cca4e0>]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -246,7 +255,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x114e0e400>]"
+       "[<matplotlib.lines.Line2D at 0x1078993c8>]"
       ]
      },
      "execution_count": 11,
@@ -278,15 +287,15 @@
      "output_type": "stream",
      "text": [
       "Found star in Sector(s) 2 5 8 9 10\n",
-      "Downloading URL https://mast.stsci.edu/tesscut/api/v0.1/astrocut?ra=124.531756290083&dec=-68.3129998725044&y=31&x=31&units=px&sector=2 to ./tesscut_20190619105636.zip ... [Done]\n",
+      "Downloading URL https://mast.stsci.edu/tesscut/api/v0.1/astrocut?ra=124.531756290083&dec=-68.3129998725044&y=31&x=31&units=px&sector=2 to ./tesscut_20190619143018.zip ... [Done]\n",
       "Inflating...\n",
-      "Downloading URL https://mast.stsci.edu/tesscut/api/v0.1/astrocut?ra=124.531756290083&dec=-68.3129998725044&y=31&x=31&units=px&sector=5 to ./tesscut_20190619105644.zip ... [Done]\n",
+      "Downloading URL https://mast.stsci.edu/tesscut/api/v0.1/astrocut?ra=124.531756290083&dec=-68.3129998725044&y=31&x=31&units=px&sector=5 to ./tesscut_20190619143026.zip ... [Done]\n",
       "Inflating...\n",
-      "Downloading URL https://mast.stsci.edu/tesscut/api/v0.1/astrocut?ra=124.531756290083&dec=-68.3129998725044&y=31&x=31&units=px&sector=8 to ./tesscut_20190619105654.zip ... [Done]\n",
+      "Downloading URL https://mast.stsci.edu/tesscut/api/v0.1/astrocut?ra=124.531756290083&dec=-68.3129998725044&y=31&x=31&units=px&sector=8 to ./tesscut_20190619143033.zip ... [Done]\n",
       "Inflating...\n",
-      "Downloading URL https://mast.stsci.edu/tesscut/api/v0.1/astrocut?ra=124.531756290083&dec=-68.3129998725044&y=31&x=31&units=px&sector=9 to ./tesscut_20190619105703.zip ... [Done]\n",
+      "Downloading URL https://mast.stsci.edu/tesscut/api/v0.1/astrocut?ra=124.531756290083&dec=-68.3129998725044&y=31&x=31&units=px&sector=9 to ./tesscut_20190619143039.zip ... [Done]\n",
       "Inflating...\n",
-      "Downloading URL https://mast.stsci.edu/tesscut/api/v0.1/astrocut?ra=124.531756290083&dec=-68.3129998725044&y=31&x=31&units=px&sector=10 to ./tesscut_20190619105709.zip ... [Done]\n",
+      "Downloading URL https://mast.stsci.edu/tesscut/api/v0.1/astrocut?ra=124.531756290083&dec=-68.3129998725044&y=31&x=31&units=px&sector=10 to ./tesscut_20190619143046.zip ... [Done]\n",
       "Inflating...\n"
      ]
     }
@@ -352,25 +361,25 @@
      "output_type": "stream",
      "text": [
       "Found star in Sector(s) 1 2 3 4 5 6 7 8 9 10\n",
-      "Downloading URL https://mast.stsci.edu/tesscut/api/v0.1/astrocut?ra=68.9597092399964&dec=-64.0270368810381&y=31&x=31&units=px&sector=1 to ./tesscut_20190619105733.zip ... [Done]\n",
+      "Downloading URL https://mast.stsci.edu/tesscut/api/v0.1/astrocut?ra=68.9597092399964&dec=-64.0270368810381&y=31&x=31&units=px&sector=1 to ./tesscut_20190619143111.zip ... [Done]\n",
       "Inflating...\n",
-      "Downloading URL https://mast.stsci.edu/tesscut/api/v0.1/astrocut?ra=68.9597092399964&dec=-64.0270368810381&y=31&x=31&units=px&sector=2 to ./tesscut_20190619105740.zip ... [Done]\n",
+      "Downloading URL https://mast.stsci.edu/tesscut/api/v0.1/astrocut?ra=68.9597092399964&dec=-64.0270368810381&y=31&x=31&units=px&sector=2 to ./tesscut_20190619143118.zip ... [Done]\n",
       "Inflating...\n",
-      "Downloading URL https://mast.stsci.edu/tesscut/api/v0.1/astrocut?ra=68.9597092399964&dec=-64.0270368810381&y=31&x=31&units=px&sector=3 to ./tesscut_20190619105748.zip ... [Done]\n",
+      "Downloading URL https://mast.stsci.edu/tesscut/api/v0.1/astrocut?ra=68.9597092399964&dec=-64.0270368810381&y=31&x=31&units=px&sector=3 to ./tesscut_20190619143125.zip ... [Done]\n",
       "Inflating...\n",
-      "Downloading URL https://mast.stsci.edu/tesscut/api/v0.1/astrocut?ra=68.9597092399964&dec=-64.0270368810381&y=31&x=31&units=px&sector=4 to ./tesscut_20190619105757.zip ... [Done]\n",
+      "Downloading URL https://mast.stsci.edu/tesscut/api/v0.1/astrocut?ra=68.9597092399964&dec=-64.0270368810381&y=31&x=31&units=px&sector=4 to ./tesscut_20190619143132.zip ... [Done]\n",
       "Inflating...\n",
-      "Downloading URL https://mast.stsci.edu/tesscut/api/v0.1/astrocut?ra=68.9597092399964&dec=-64.0270368810381&y=31&x=31&units=px&sector=5 to ./tesscut_20190619105806.zip ... [Done]\n",
+      "Downloading URL https://mast.stsci.edu/tesscut/api/v0.1/astrocut?ra=68.9597092399964&dec=-64.0270368810381&y=31&x=31&units=px&sector=5 to ./tesscut_20190619143138.zip ... [Done]\n",
       "Inflating...\n",
-      "Downloading URL https://mast.stsci.edu/tesscut/api/v0.1/astrocut?ra=68.9597092399964&dec=-64.0270368810381&y=31&x=31&units=px&sector=6 to ./tesscut_20190619105816.zip ... [Done]\n",
+      "Downloading URL https://mast.stsci.edu/tesscut/api/v0.1/astrocut?ra=68.9597092399964&dec=-64.0270368810381&y=31&x=31&units=px&sector=6 to ./tesscut_20190619143145.zip ... [Done]\n",
       "Inflating...\n",
-      "Downloading URL https://mast.stsci.edu/tesscut/api/v0.1/astrocut?ra=68.9597092399964&dec=-64.0270368810381&y=31&x=31&units=px&sector=7 to ./tesscut_20190619105823.zip ... [Done]\n",
+      "Downloading URL https://mast.stsci.edu/tesscut/api/v0.1/astrocut?ra=68.9597092399964&dec=-64.0270368810381&y=31&x=31&units=px&sector=7 to ./tesscut_20190619143151.zip ... [Done]\n",
       "Inflating...\n",
-      "Downloading URL https://mast.stsci.edu/tesscut/api/v0.1/astrocut?ra=68.9597092399964&dec=-64.0270368810381&y=31&x=31&units=px&sector=8 to ./tesscut_20190619105832.zip ... [Done]\n",
+      "Downloading URL https://mast.stsci.edu/tesscut/api/v0.1/astrocut?ra=68.9597092399964&dec=-64.0270368810381&y=31&x=31&units=px&sector=8 to ./tesscut_20190619143158.zip ... [Done]\n",
       "Inflating...\n",
-      "Downloading URL https://mast.stsci.edu/tesscut/api/v0.1/astrocut?ra=68.9597092399964&dec=-64.0270368810381&y=31&x=31&units=px&sector=9 to ./tesscut_20190619105838.zip ... [Done]\n",
+      "Downloading URL https://mast.stsci.edu/tesscut/api/v0.1/astrocut?ra=68.9597092399964&dec=-64.0270368810381&y=31&x=31&units=px&sector=9 to ./tesscut_20190619143204.zip ... [Done]\n",
       "Inflating...\n",
-      "Downloading URL https://mast.stsci.edu/tesscut/api/v0.1/astrocut?ra=68.9597092399964&dec=-64.0270368810381&y=31&x=31&units=px&sector=10 to ./tesscut_20190619105846.zip ... [Done]\n",
+      "Downloading URL https://mast.stsci.edu/tesscut/api/v0.1/astrocut?ra=68.9597092399964&dec=-64.0270368810381&y=31&x=31&units=px&sector=10 to ./tesscut_20190619143211.zip ... [Done]\n",
       "Inflating...\n",
       "0\n"
      ]
@@ -381,7 +390,7 @@
      "text": [
       "/Users/ozymandias1/anaconda2/envs/python3/lib/python3.5/importlib/_bootstrap.py:222: RuntimeWarning: compiletime version 3.6 of module 'tensorflow.python.framework.fast_tensor_util' does not match runtime version 3.5\n",
       "  return f(*args, **kwds)\n",
-      "100%|██████████| 1282/1282 [00:16<00:00, 79.71it/s]\n"
+      "100%|██████████| 1282/1282 [00:17<00:00, 72.83it/s]\n"
      ]
     },
     {
@@ -395,7 +404,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1245/1245 [00:16<00:00, 77.49it/s]\n"
+      "100%|██████████| 1245/1245 [00:14<00:00, 83.90it/s]\n"
      ]
     },
     {
@@ -409,7 +418,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1288/1288 [00:19<00:00, 67.34it/s]\n"
+      "100%|██████████| 1288/1288 [00:19<00:00, 65.23it/s]\n"
      ]
     },
     {
@@ -423,7 +432,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1060/1060 [00:14<00:00, 73.67it/s]\n"
+      "100%|██████████| 1060/1060 [00:12<00:00, 83.06it/s]\n"
      ]
     },
     {
@@ -437,7 +446,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1196/1196 [00:14<00:00, 83.77it/s]\n"
+      "100%|██████████| 1196/1196 [00:14<00:00, 84.46it/s]\n"
      ]
     },
     {
@@ -451,7 +460,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 993/993 [00:11<00:00, 82.97it/s]\n"
+      "100%|██████████| 993/993 [00:11<00:00, 85.80it/s]\n"
      ]
     },
     {
@@ -465,7 +474,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1093/1093 [00:12<00:00, 88.21it/s]\n"
+      "100%|██████████| 1093/1093 [00:12<00:00, 86.51it/s]\n"
      ]
     },
     {
@@ -479,7 +488,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 968/968 [00:11<00:00, 85.77it/s]\n"
+      "100%|██████████| 968/968 [00:11<00:00, 85.58it/s]\n"
      ]
     },
     {
@@ -493,7 +502,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1154/1154 [00:14<00:00, 81.03it/s]\n"
+      "100%|██████████| 1154/1154 [00:14<00:00, 81.55it/s]\n"
      ]
     },
     {
@@ -507,7 +516,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1211/1211 [00:13<00:00, 89.98it/s]\n"
+      "100%|██████████| 1211/1211 [00:14<00:00, 82.52it/s]\n"
      ]
     },
     {
@@ -549,20 +558,6 @@
     "\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
