fixed bullet points

--- a/docs/getting_started/tutorial.ipynb
+++ b/docs/getting_started/tutorial.ipynb
@@ -136,9 +136,12 @@
     "We can also set some operations when calling this function. For example, `do_pca = True` tells $\\texttt{eleanor}$ to use the cotrending basis vectors on a background subtracted light curve without any additional correction. And `do_psf = True` creates a point spread function modeled light curve of our target.\n",
     "\n",
     "In addition to automatically choosing an aperture, `eleanor.TargetData()` also tries a few different background subtractions to remove as much background noise as possible. The three options it tries are:\n",
-    "    - 1D postcard background : A constant ($3\\mu + 2med$) is calculated from each postcard frame\n",
-    "    - 1D TPF background : A constant ($3\\mu + 2med$) is calculated from each TPF frame \n",
-    "    - 2D background : The 2D background pixels are subtracted from the TPF\n",
+    "\n",
+    "- 1D postcard background : A constant ($3\\mu + 2med$) is calculated from each postcard frame\n",
+    "\n",
+    "- 1D TPF background : A constant ($3\\mu + 2med$) is calculated from each TPF frame \n",
+    "\n",
+    "- 2D background : The 2D background pixels are subtracted from the TPF\n",
     "    \n",
     "For both 1D options, stars are masked before estimating the background value."
    ]
@@ -175,10 +178,10 @@
     "Let's look at our new light curves! \n",
     "\n",
     "Plotted below are the following:\n",
-    "    - Black : the raw light curve (aperture $\\times$ TPF + background subtraction)\n",
-    "    - Red : the corrected light curve (black light curve + additional corrections)\n",
-    "    - Green : the PCA light curve (aperture $\\times$ TPF + background subtraction + cotrending basis vectors)\n",
-    "    - Blue : the PSF modeled light curve\n",
+    "- Black : the raw light curve (aperture $\\times$ TPF + background subtraction)\n",
+    "- Red : the corrected light curve (black light curve + additional corrections)\n",
+    "- Green : the PCA light curve (aperture $\\times$ TPF + background subtraction + cotrending basis vectors)\n",
+    "- Blue : the PSF modeled light curve\n",
     "    \n",
     "\n",
     "Before plotting, we can use quality flags to mask poor quality data. Our quality flags are taken from the two-minute $\\textit{TESS}$ light curves and binned to 30-minutes. We are very generous with our masking, so any flag that applies to the entire FFI is marked in `data.quality`. We also introduce our own quality flag for when the pointing model significantly deviates from a best-fit line in the sector (see Figure 2 in Feinstein et al. 2019)."
@@ -250,9 +253,12 @@
    "metadata": {},
    "source": [
     "We can even plot the background as a function of time to see what was removed from our light curve. All three background models are saved and can be called by the following:\n",
-    "    - 1D postcard background : data.bkg_type = 'PC_LEVEL' : keyword = data.flux_bkg\n",
-    "    - 1D TPF background : data.bkg_type = 'TPF_LEVEL' : keyword = data.tpf_flux_bkg\n",
-    "    - 2D TPF backround : data.bkg_type = 'TPF_2D_LEVEL' : keyword = data.bkg_tpf"
+    "\n",
+    "- 1D postcard background : data.bkg_type = 'PC_LEVEL' : keyword = data.flux_bkg\n",
+    "\n",
+    "- 1D TPF background : data.bkg_type = 'TPF_LEVEL' : keyword = data.tpf_flux_bkg\n",
+    "\n",
+    "- 2D TPF backround : data.bkg_type = 'TPF_2D_LEVEL' : keyword = data.bkg_tpf\n"
    ]
   },
   {
