clarified gaia dr2 identifier passed in

--- a/docs/getting_started/tutorial.ipynb
+++ b/docs/getting_started/tutorial.ipynb
@@ -49,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, we will load the data for TIC 38846515 (WASP-100), a relatively bright star observed in Sector 1. $\\texttt{eleanor}$ is able to extract a light curve easily and automatically for this unblended object. Calling source will assign a $\\textit{Gaia}$ ID, TESS magnitude, sector, camera, ccd, and associated postcard."
+    "First, we will load the data for TIC 38846515 (WASP-100), a relatively bright star observed in Sector 1. $\\texttt{eleanor}$ is able to extract a light curve easily and automatically for this unblended object. Calling source will assign a $\\textit{Gaia}$ DR2 ID, TESS magnitude, sector, camera, ccd, and associated postcard."
    ]
   },
   {
