fixing multi_sector typo in tutorial

--- a/docs/getting_started/tutorial.ipynb
+++ b/docs/getting_started/tutorial.ipynb
@@ -782,7 +782,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this case, I only wanted sectors 1 and 2. However, I could have passed through `sectors=all` to get all sectors in which this star was observed."
+    "In this case, I only wanted sectors 1 and 2. However, I could have passed through `sectors='all'` to get all sectors in which this star was observed."
    ]
   },
   {
