--- a/docs/getting_started/tutorial.ipynb
+++ b/docs/getting_started/tutorial.ipynb
@@ -554,7 +554,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We're still exploring what the best practices are generally. Good practices seem to differ across the detector, but here's what we believe so far. If you discover anything that works well for you, we and other $\\texttt{eleanor}$ users would surely love to know them! You can also find some tips, tricks, and hacks in the next example notebook."
+    "We're still exploring what the best practices are generally. Good practices seem to differ across the detector, but here's what we believe so far. If you discover anything that works well for you, we and other $\\texttt{eleanor}$ users would surely love to know them! You can also find some [tips, tricks, and hacks](http://adina.feinste.in/eleanor/getting_started/tips_tricks.html) in the next example notebook."
    ]
   },
   {
@@ -582,9 +582,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [python3]",
    "language": "python",
-   "name": "python3"
+   "name": "Python [python3]"
   },
   "language_info": {
    "codemirror_mode": {
@@ -596,7 +596,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
